--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="@dimen/dimen_100"
+        android:layout_marginTop="@dimen/dimen_3"
+        android:layout_marginEnd="@dimen/dimen_15"
+        android:elevation="@dimen/dimen_4"
+        app:cardBackgroundColor="@color/purple_700"
+        app:cardCornerRadius="@dimen/dimen_15"
+        app:contentPaddingBottom="@dimen/dimen_5"
+        app:contentPaddingLeft="@dimen/dimen_10"
+        app:contentPaddingRight="@dimen/dimen_10"
+        app:contentPaddingTop="@dimen/dimen_5">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/messageText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dimen_4"
+                android:text="@string/messenge"
+                android:textColor="@color/white"
+                android:textIsSelectable="true"
+                android:textSize="@dimen/dimenst_16" />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/dimen_4"
+                android:text="@string/time"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimenst_12" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
