--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,9 @@
     <dimen name="dimen_0">0dp</dimen>
     <dimen name="dimen_2">2dp</dimen>
     <dimen name="dimen_5">5dp</dimen>
+    <dimen name="dimen_100">100dp</dimen>
+    <dimen name="dimen_3">3dp</dimen>
+    <dimen name="dimen_4">4dp</dimen>
+    <dimen name="dimenst_12">12sp</dimen>
+    <dimen name="dimen_1">1dp</dimen>
 </resources>
