--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,46 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:contentPadding="@dimen/dimen_12"
-        >
+        app:contentPadding="@dimen/dimen_12">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/circularImg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/dimen_150"
-                >
+                app:cardCornerRadius="@dimen/dimen_150">
+
                 <ImageView
                     android:id="@+id/userImage"
                     android:layout_width="@dimen/dimen_50"
                     android:layout_height="@dimen/dimen_50"
-                    android:src="@drawable/ic_launcher_foreground"
-                    />
+                    android:src="@drawable/ic_launcher_foreground" />
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/dimen_15"
                 android:layout_marginTop="@dimen/dimenst_15"
                 android:layout_toEndOf="@id/circularImg"
                 android:text="@string/name"
+                android:textColor="@color/black_200"
                 android:textSize="@dimen/dimenst_16"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/lastMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/userName"
+                android:layout_marginStart="@dimen/dimen_15"
+                android:layout_marginTop="@dimen/dimen_3"
+                android:layout_toEndOf="@id/circularImg"
+                android:lines="1"
+                android:text="@string/name"
+                android:textSize="@dimen/dimenst_14" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
