--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="dimen_4">4dp</dimen>
     <dimen name="dimenst_12">12sp</dimen>
     <dimen name="dimen_1">1dp</dimen>
+    <dimen name="dimenst_14">14sp</dimen>
 </resources>
