--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".views.ui.LoginFragment">
+    tools:context=".views.ui.login.LoginFragment">
 
 
 
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnSignIn"
         app:layout_constraintEnd_toEndOf="parent"
         >
 
@@ -67,6 +67,20 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnSignIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/btnLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/signIn"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/yellow_dark"
+        android:background="@drawable/radius_corner_btn"
+        android:layout_margin="@dimen/dimen_10"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,7 +89,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/login"
         android:textColor="@color/white"
-        android:background="@color/purple_700"
+        android:backgroundTint="@color/purple_500"
+        android:background="@drawable/radius_corner_btn"
         android:layout_margin="@dimen/dimen_10"
         />
 
