--- a/app/src/main/res/layout/message_item2.xml
+++ b/app/src/main/res/layout/message_item2.xml
@@ -7,13 +7,17 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_3"
         android:layout_marginStart="@dimen/dimen_15"
-        android:layout_marginTop="@dimen/dimen_5"
+        android:layout_marginBottom="@dimen/dimen_3"
         android:layout_marginEnd="@dimen/dimen_100"
         android:elevation="@dimen/dimen_1"
-        app:cardCornerRadius="@dimen/dimen_15"
-        app:contentPadding="@dimen/dimen_5"
         app:cardBackgroundColor="@color/gray_cultured"
+        app:cardCornerRadius="@dimen/dimen_15"
+        app:contentPaddingBottom="@dimen/dimen_5"
+        app:contentPaddingLeft="@dimen/dimen_10"
+        app:contentPaddingRight="@dimen/dimen_10"
+        app:contentPaddingTop="@dimen/dimen_5"
         >
 
         <LinearLayout
@@ -30,7 +34,6 @@
                 android:text="@string/messenge"
                 android:textColor="@color/black"
                 android:textSize="@dimen/dimenst_16"
-                android:layout_margin="@dimen/dimen_4"
                 />
             <TextView
                 android:id="@+id/time"
