--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -12,19 +12,22 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/circularImg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 app:cardCornerRadius="@dimen/dimen_150">
 
                 <ImageView
                     android:id="@+id/userImage"
                     android:layout_width="@dimen/dimen_50"
                     android:layout_height="@dimen/dimen_50"
-                    android:src="@drawable/ic_launcher_foreground" />
+                    android:src="@drawable/ic_launcher_foreground"
+                    android:contentDescription="@string/imageDesc" />
             </androidx.cardview.widget.CardView>
 
             <TextView
