--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="dimenst_12">12sp</dimen>
     <dimen name="dimen_1">1dp</dimen>
     <dimen name="dimenst_14">14sp</dimen>
+    <dimen name="dimen_40">40dp</dimen>
+    <dimen name="dimen_30">30dp</dimen>
+    <dimen name="dimen_8">8dp</dimen>
 </resources>
