--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromXDelta="@integer/material_motion_duration_long_1"
-    android:toXDelta="@integer/material_motion_duration_long_1"
-    android:duration="@integer/material_motion_duration_long_1"
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromAlpha="100"
+    android:toAlpha="0"
     />
