--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -43,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
         android:paddingVertical="@dimen/dimen_3"
-        tools:listitem="@layout/message_item" />
+        tools:listitem="@layout/message_item_1" />
 
 
     <RelativeLayout
@@ -54,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <EditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/boxMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,8 +65,9 @@
             android:layout_toStartOf="@id/btnSender"
             android:background="@drawable/login_input_corner"
             android:hint="@string/message"
+            android:textCursorDrawable="@color/purple_700"
             android:maxLines="7"
-            android:padding="@dimen/dimen_10"
+            android:padding="@dimen/dimen_8"
             android:textColor="@color/black"
             android:textColorHint="@color/cardview_shadow_start_color" />
 
@@ -80,7 +81,7 @@
             android:layout_marginEnd="@dimen/dimen_15"
             android:background="@drawable/radius_corner"
             android:contentDescription="@string/fab_content_desc"
-            android:padding="10dp"
+            android:padding="@dimen/dimen_8"
             android:src="@drawable/send_24"
             app:tint="@color/white" />
     </RelativeLayout>
