--- a/app/src/main/res/layout/user_search_item.xml
+++ b/app/src/main/res/layout/user_search_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -9,18 +9,12 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="@dimen/dimen_5"
         >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:padding="@dimen/dimen_5"
-            android:gravity="center_vertical"
             >
 
             <ImageView
@@ -31,16 +25,29 @@
                 android:contentDescription="@string/imageDesc"
                 android:background="@drawable/radius_corner_img"
                 />
+
             <TextView
                 android:id="@+id/userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="@string/name"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/dimen_15"
-                />
+                android:layout_toEndOf="@id/userImg"
+                tools:text="@string/name" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/request"
+                android:textColor="@color/blue_200"
+                android:layout_marginEnd="@dimen/dimen_10"
+                android:textStyle="italic" />
+
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
