--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="dimen_40">40dp</dimen>
     <dimen name="dimen_30">30dp</dimen>
     <dimen name="dimen_8">8dp</dimen>
+    <dimen name="dimen_25">25dp</dimen>
 </resources>
