--- a/app/src/main/res/layout/message_item_right_1.xml
+++ b/app/src/main/res/layout/message_item_right_1.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="end"
     android:gravity="center_vertical"
-    android:padding="@dimen/dimen_3"
-    >
+    android:padding="@dimen/dimen_3">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardBox"
@@ -18,19 +17,17 @@
         android:layout_marginTop="@dimen/dimen_2"
         android:layout_marginEnd="@dimen/dimen_10">
 
-        <androidx.cardview.widget.CardView
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/cardMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/dimen_1"
-            app:cardBackgroundColor="@color/purple_500"
-            app:cardCornerRadius="@dimen/dimen_10"
-            app:contentPaddingBottom="@dimen/dimen_3"
-            app:contentPaddingLeft="@dimen/dimen_8"
-            app:contentPaddingRight="@dimen/dimen_8"
-            app:contentPaddingTop="@dimen/dimen_3"
+            android:background="@drawable/bubble_item_right"
+            android:paddingHorizontal="@dimen/dimen_10"
+            android:paddingVertical="@dimen/dimen_5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="center_horizontal|center_vertical"
+            >
 
 
             <TextView
@@ -46,7 +43,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.cardview.widget.CardView>
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -57,7 +54,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="@dimen/dimen_15"
         android:text="@string/time"
-        android:textSize="@dimen/dimenst_12"
-        />
+        android:textSize="@dimen/dimenst_12" />
 
 </RelativeLayout>
