--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <dimen name="dimen_30">30dp</dimen>
     <dimen name="dimen_8">8dp</dimen>
     <dimen name="dimen_25">25dp</dimen>
+    <dimen name="dimenst_24">24sp</dimen>
 </resources>
