--- a/app/src/main/res/drawable/bubble_item_left.xml
+++ b/app/src/main/res/drawable/bubble_item_left.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     >
-
     <corners
         android:topRightRadius="@dimen/dimen_25"
         android:topLeftRadius="@dimen/dimen_25"
-        android:bottomLeftRadius="@dimen/dimen_25"
+        android:bottomRightRadius="@dimen/dimen_20"
         />
     <solid
-        android:color="@color/purple_700"
+        android:color="@color/white"
         />
 </shape>
