refactoring chatRoom activity

--- a/app/src/main/res/drawable/bubble_item_left.xml
+++ b/app/src/main/res/drawable/bubble_item_left.xml
@@ -9,4 +9,7 @@
     <solid
         android:color="@color/white"
         />
+    <stroke android:width="@dimen/dimen_1"
+        android:color="@color/material_on_surface_stroke"
+        />
 </shape>
