--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -24,7 +24,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@color/purple_500"
+            android:background="@color/indigo"
             app:contentInsetStart="@dimen/dimen_10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,61 +49,12 @@
         tools:listitem="@layout/message_item_right_1" />
 
 
-    <RelativeLayout
+    <com.example.chatapp.components.InputSmsComponent
         android:id="@+id/inputContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@null"
-        >
-
-        <ImageView
-            android:id="@+id/btEmoji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/boxMessage"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="@dimen/dimen_15"
-            android:contentDescription="@string/fab_content_desc"
-            android:padding="@dimen/dimen_8"
-            android:src="@drawable/ic_emoji"
-            app:tint="@color/black_200" />
-
-
-        <com.vanniktech.emoji.EmojiEditText
-            android:id="@+id/boxMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_5"
-            android:layout_marginTop="@dimen/dimen_15"
-            android:layout_marginEnd="@dimen/dimen_15"
-            android:layout_marginBottom="@dimen/dimen_15"
-            android:layout_toStartOf="@id/btnSender"
-            android:layout_toEndOf="@id/btEmoji"
-            android:background="@drawable/login_input_corner"
-            android:cursorVisible="true"
-            android:hint="@string/message"
-            android:maxLines="7"
-            android:paddingVertical="@dimen/dimen_8"
-            android:paddingHorizontal="@dimen/dimen_15"
-            android:textColor="@color/black"
-            android:textColorHint="@color/cardview_shadow_start_color"
-            android:textCursorDrawable="@color/purple_700" />
-
-        <ImageView
-            android:id="@+id/btnSender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/boxMessage"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="@dimen/dimen_15"
-            android:layout_marginEnd="@dimen/dimen_15"
-            android:background="@drawable/radius_corner"
-            android:contentDescription="@string/fab_content_desc"
-            android:padding="@dimen/dimen_8"
-            android:src="@drawable/send_24"
-            app:tint="@color/white" />
-    </RelativeLayout>
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
