--- a/app/src/main/res/layout/input_component.xml
+++ b/app/src/main/res/layout/input_component.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@null">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -14,7 +15,6 @@
         android:layout_marginStart="@dimen/dimen_10"
         android:layout_marginTop="@dimen/dimen_15"
         android:contentDescription="@string/fab_content_desc"
-        android:src="@drawable/ic_emoji"
         app:tint="@color/black_200" />
 
 
@@ -23,19 +23,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/dimen_5"
-        android:layout_marginEnd="@dimen/dimen_15"
         android:layout_toStartOf="@id/btnSender"
         android:layout_toEndOf="@id/btEmoji"
-        android:background="@drawable/login_input_corner"
-        android:cursorVisible="true"
-        android:hint="@string/message"
-        android:maxLines="7"
-        android:paddingHorizontal="@dimen/dimen_15"
-        android:paddingVertical="@dimen/dimen_8"
-        android:textColor="@color/black"
-        android:textColorHint="@color/cardview_shadow_start_color"
-        android:textCursorDrawable="@color/purple_700" />
+        style="@style/chatRoom_inputText"
+        android:focusable="auto"
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnSender"
