--- a/app/src/main/res/layout/message_item2.xml
+++ b/app/src/main/res/layout/message_item2.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/messenge"
                 android:textColor="@color/black"
-                android:textSize="@dimen/dimenst_16"
+                android:textSize="@dimen/dimenSt_16"
                 />
             <TextView
                 android:id="@+id/time"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:text="@string/from"
-                android:textSize="@dimen/dimenst_12"
+                android:textSize="@dimen/dimenSt_12"
                 android:textColor="@color/black_200"
                 android:layout_marginStart="@dimen/dimen_4"
                 />
