--- a/app/src/main/res/layout/message_item_left_2.xml
+++ b/app/src/main/res/layout/message_item_left_2.xml
@@ -35,7 +35,7 @@
                 android:text="@string/messenge"
                 android:textColor="@color/black"
                 android:textIsSelectable="false"
-                android:textSize="@dimen/dimenst_16"
+                android:textSize="@dimen/dimenSt_16"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/time"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +53,6 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="@dimen/dimen_15"
         android:text="@string/time"
-        android:textSize="@dimen/dimenst_12" />
+        android:textSize="@dimen/dimenSt_12" />
 
 </RelativeLayout>
