--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -40,11 +40,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimenst_15"
+                android:layout_marginTop="@dimen/dimenSt_15"
                 android:layout_toEndOf="@id/circularImg"
                 android:text="@string/name"
                 android:textColor="@color/black_200"
-                android:textSize="@dimen/dimenst_16"
+                android:textSize="@dimen/dimenSt_16"
                 android:textStyle="bold" />
 
 
