--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,8 @@
     <dimen name="dimen_20">20dp</dimen>
     <dimen name="dimen_15">15dp</dimen>
     <dimen name="dimen_10">10dp</dimen>
-    <dimen name="dimenst_15">15sp</dimen>
-    <dimen name="dimenst_16">16sp</dimen>
+    <dimen name="dimenSt_15">15sp</dimen>
+    <dimen name="dimenSt_16">16sp</dimen>
     <dimen name="dimen_50">50dp</dimen>
     <dimen name="dimen_150">150dp</dimen>
     <dimen name="dimen_12">12dp</dimen>
@@ -14,12 +14,13 @@
     <dimen name="dimen_100">100dp</dimen>
     <dimen name="dimen_3">3dp</dimen>
     <dimen name="dimen_4">4dp</dimen>
-    <dimen name="dimenst_12">12sp</dimen>
+    <dimen name="dimenSt_12">12sp</dimen>
     <dimen name="dimen_1">1dp</dimen>
-    <dimen name="dimenst_14">14sp</dimen>
+    <dimen name="dimenSt_14">14sp</dimen>
     <dimen name="dimen_40">40dp</dimen>
     <dimen name="dimen_30">30dp</dimen>
     <dimen name="dimen_8">8dp</dimen>
     <dimen name="dimen_25">25dp</dimen>
-    <dimen name="dimenst_24">24sp</dimen>
+    <dimen name="dimenSt_24">24sp</dimen>
+    <dimen name="dimenSt_18">18sp</dimen>
 </resources>
