--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -49,7 +49,7 @@
         tools:listitem="@layout/message_item_right_1" />
 
 
-    <com.example.chatapp.components.InputSmsComponent
+    <com.example.chatapp.componentsUi.InputSmsComponent
         android:id="@+id/inputContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
