--- a/app/src/main/res/layout/message_item2.xml
+++ b/app/src/main/res/layout/message_item2.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/messageText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/messenge"
+                android:text="@string/message"
                 android:textColor="@color/black"
                 android:textSize="@dimen/dimenSt_16"
                 />
