--- a/app/src/main/res/layout/message_item_left_2.xml
+++ b/app/src/main/res/layout/message_item_left_2.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/messageText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/messenge"
+                android:text="@string/message"
                 android:textColor="@color/black"
                 android:textIsSelectable="false"
                 android:textSize="@dimen/dimenSt_16"
