--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 
     <color name="indigo">#3F51B5</color>
     <color name="indigo_dark">#303F9F</color>
+    <color name="blue">#2A4DCB</color>
     <color name="light_indigo">#C5CAE9</color>
     <color name="accent">#607D8B</color>
     <color name="primary_text">#212121</color>
